Fixed footer spacing issues, adding font-awesome icons to navbar

--- a/users/static/css/base.css
+++ b/users/static/css/base.css
@@ -4,8 +4,12 @@ html {
 }
 
 body {
-    padding-top: 60px;
+    padding-top: 80px;
     margin-bottom: 60px;
+}
+
+.h1 {
+    line-height: 20px;
 }
 
 @media (max-width: 980px) {
@@ -20,7 +24,7 @@ body {
     width: 100%;
     height: 60px;
     /* Set the fixed height of the footer here */
-    line-height: 60px;
+    line-height: 45px;
     /* Vertically center the text there */
     background-color: #f5f5f5;
 }
